microk8s/microservice/apps/user-fe/overlays/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user-fe-ingress
  namespace: dev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/dashboard`)
      kind: Rule
      priority: 200
      services:
        - name: user-fe-svc
          port: 3000
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/_next`)
      kind: Rule
      priority: 190
      services:
        - name: user-fe-svc
          port: 3000
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/auth`)
      kind: Rule
      priority: 180
      services:
        - name: user-fe-svc
          port: 3000
    # Route cho GraphQL API - set before PathPrefix has priority higher than catch all
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/graphql`)
      kind: Rule
      priority: 100
      services:
        - name: user-bff-svc
          port: 4000
    # Route cho frontend - catch all
    - match: Host(`demo-dev.manhlam.name.vn`) && PathPrefix(`/`)
      kind: Rule
      priority: 170
      services:
        - name: user-fe-svc
          port: 3000
